--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#B52020">
 
     <TextView
         android:id="@+id/f_city_name_textview"
@@ -15,10 +16,11 @@
         android:textStyle="bold"
         android:layout_margin="16dp"
         android:textSize="40dp"
+        android:textColor="@color/white"
         />
 
     <TextView
-        android:id="@+id/f_date_nam_textview"
+        android:id="@+id/f_date_name_textview"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,43 +30,35 @@
         android:textStyle="bold"
         android:layout_margin="16dp"
         android:textSize="16dp"
+        android:textColor="@color/white"
         />
     <TextView
         android:id="@+id/f_confirmed_cases_textview"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/f_date_nam_textview"
+        app:layout_constraintTop_toBottomOf="@id/f_date_name_textview"
         app:layout_constraintStart_toStartOf="parent"
         tools:text = "cases:10000"
         android:textStyle="bold"
         android:layout_margin="16dp"
         android:textSize="16dp"
+        android:textColor="@color/white"
         />
 
-    <TextView
-        android:id="@+id/f_actve_textview"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/f_confirmed_cases_textview"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text = "active: 10000"
-        android:textStyle="bold"
-        android:layout_margin="16dp"
-        android:textSize="16dp"
-        />
+
     <TextView
         android:id="@+id/f_death_textview"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/f_actve_textview"
+        app:layout_constraintTop_toBottomOf="@id/f_confirmed_cases_textview"
         app:layout_constraintStart_toStartOf="parent"
         tools:text = "Death: 10000"
         android:textStyle="bold"
         android:layout_margin="16dp"
         android:textSize="16dp"
+        android:textColor="@color/white"
         />
     <TextView
         android:id="@+id/f_fatility_textview"
@@ -77,6 +71,7 @@
         android:textStyle="bold"
         android:layout_margin="16dp"
         android:textSize="16dp"
+        android:textColor="@color/white"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
